--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
@@ -1,4 +1,5 @@
 ﻿@model MiniShoppingCartModel
+
 @using SmartStore.Web.Models.ShoppingCart;
 @using SmartStore.Core.Domain.Orders;
 
@@ -94,8 +95,8 @@
 
 					<div class="row m-t-05">
 						<div class="col-xs col-alpha">
-                            @Html.EditorFor(x => item, "QtyInput", 
-                                new { htmlAttributes = new { data_update_url = Url.Action("UpdateOcCartItem", "ShoppingCart"), data_type = "cart", data_sci_id = item.Id } })
+                            @Html.EditorFor(x => item, "QtyInput", new { htmlAttributes = new {
+								data_update_url = Url.Action("UpdateOcCartItem", "ShoppingCart"), data_type = "cart", data_sci_id = item.Id } })
 						</div>
 						<div class="col-xs">
 							<span class="price unit-price">
