--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
@@ -139,8 +139,8 @@
 
 @if (Model.Items.Count > 0)
 {
-    <div class="offcanvas-cart-footer text-xs-right">
-        <a class="btn btn-clear btn-action" href="@Url.RouteUrl("Wishlist")">
+    <div class="offcanvas-cart-footer">
+        <a class="btn btn-clear btn-block btn-action" href="@Url.RouteUrl("Wishlist")">
             <i class="fa fa-check"></i>
             <span>@T("Wishlist.Mini.ViewWishlist")</span>
         </a>
