--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_nav.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_nav.scss
@@ -32,6 +32,7 @@
     .nav-link {
         font-size: $font-size-lg;
         text-transform: uppercase;
+        text-align: center;
         position: relative;
         border-width: 0;
         background-color: transparent;
