Leave OffCanvasCart open when items are shifted from cart to wish list and vice versa

--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
@@ -112,7 +112,7 @@
                                 data-href="@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.ShoppingCart })"
                                 data-name="@item.ProductName"
                                 data-type="cart"
-                                data-action="addfromwishlist">
+                                data-action="addfromcart">
                                 <i class="fa fa-heart-o"></i>
                             </a>
                             
