--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -74,7 +74,7 @@
 			<div class="col-xs p-r-05">
 				<a class="btn btn-clear btn-block btn-action" href="@Url.RouteUrl("CompareProducts")">
 					<i class="fa fa-check"></i>
-					<span>@T("Products.Compare.List")</span>
+					<span>@T("Products.Compare.CompareNow")</span>
 				</a>
 			</div>
 			<div class="col-xs p-l-05">
