--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayShoppingCart/MiniShoppingCart.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayShoppingCart/MiniShoppingCart.cshtml
@@ -1,12 +1,7 @@
 ﻿@model SmartStore.AmazonPay.Models.AmazonPayViewModel
 
-<div class="clearfix" style="padding: 0 20px 8px 20px; float: right;">
-	<div style="text-align: right; padding-bottom: 3px;">
-		@T("Plugins.Payments.AmazonPay.SelectionText")
-	</div>
-	<div id="@Model.GetWidgetId">
-		<img src="@Model.ButtonUrl" style="cursor: pointer;" />
-	</div>
-</div>
+<span id="@Model.GetWidgetId" class="text-xs-right">
+	<img src="@Model.ButtonUrl" style="cursor: pointer" />
+</span>
 
 @{ Html.RenderPartial("ScriptingLoginButton", Model); }
