--- a/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/MiniShoppingCart.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/MiniShoppingCart.cshtml
@@ -1,10 +1,6 @@
 ﻿@model SmartStore.PayPal.Models.PayPalExpressPaymentInfoModel
-<div class="clearfix" style="padding: 0 20px 0 20px; float: right;">
-	<div style="text-align: right;">
-		@T("Plugins.Payments.PayPalExpress.SelectionText")
-	</div>
-	<div>
-		<a href="@Url.Action("SubmitButton", "PayPalExpress", new { area = "SmartStore.PayPal" })">
-			<img src="@Model.SubmitButtonImageUrl" style="cursor: pointer;" /></a>
-	</div>
-</div>
+	
+<a href="@Url.Action("SubmitButton", "PayPalExpress", new { area = "SmartStore.PayPal" })">
+	@*<img src="@Model.SubmitButtonImageUrl" style="cursor: pointer;" />*@
+    <img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/checkout-logo-small-de.png")" />
+</a>
