--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
@@ -4,13 +4,13 @@
 @using SmartStore.Core.Domain.Orders;
 
 @{
-	int descMaxLength = Model.ShowProductImages ? 100 : 140;
-	int attrMaxLength = Model.ShowProductImages ? 50 : 70;
+    int descMaxLength = Model.ShowProductImages ? 100 : 140;
+    int attrMaxLength = Model.ShowProductImages ? 50 : 70;
 }
 
 <div class="offcanvas-cart-body">
 	@if (Model.TotalProducts == 0)
-	{
+    {
 		<div class="no-items">
 			<h4 class="no-item-title">
 				@T("ShoppingCart.Mini.EmptyCart.Title")
@@ -22,39 +22,39 @@
 				@T("ShoppingCart.Mini.EmptyCart.Info", "fa fa-lg fa-cart-arrow-down")
 			</p>
 		</div>
-	}
+    }
 
     @if (Model.TotalProducts > 0)
-	{
-		// Items added in the last 2 seconds are considered to be current
-		var currentItem = Model.Items.FirstOrDefault(x => x.CreatedOnUtc >= DateTime.UtcNow.AddSeconds(-2));
+    {
+        // Items added in the last 2 seconds are considered to be current
+        var currentItem = Model.Items.FirstOrDefault(x => x.CreatedOnUtc >= DateTime.UtcNow.AddSeconds(-2));
 
-		if (currentItem != null)
-		{
+        if (currentItem != null)
+        {
 			<div class="alert alert-success alert-dismissible fade in" role="alert">
 				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 				@Html.Raw(T("ShoppingCart.Mini.AddedItemToCart", "<strong>" + currentItem.ProductName.Truncate(50, "...") + "</strong>").Text)
 			</div>
-		}
+        }
 
 		<div class="offcanvas-cart-items">
 			@foreach (var item in Model.Items)
-			{
+            {
 				<div class="offcanvas-cart-item">
 					<div class="row">
 						@if (Model.ShowProductImages)
-						{
+                        {
 							<div class="col-xs col-alpha">
 								@if (item.Picture.ImageUrl.HasValue())
-								{
+                                {
 									<a class="img-center-container" href="@item.ProductUrl" title="@item.Picture.Title">
 										<img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
 									</a>
-								}
+                                }
 							</div>
-						}
+                        }
 
 						<div class="col-xs col-data">
 							<a class="name fw-600" href="@item.ProductUrl" title="@item.ProductName">@item.ProductName</a>
@@ -63,40 +63,40 @@
 							</div>
 
 							@if (item.AttributeInfo.HasValue())
-							{
+                            {
 								<div class="attributes">
 									@Html.Raw(item.AttributeInfo)
 								</div>
-							}
+                            }
 
 							@if (item.BundleItems.Count > 0)
-							{
+                            {
 								<div class="mb-bundle-pictures m-t-1">
 									@for (int j = 0, bundlelength = item.BundleItems.Count; j < bundlelength; j++)
-									{
-										var bundleItem = item.BundleItems[j];
+                                    {
+                                        var bundleItem = item.BundleItems[j];
 
-										if (bundleItem.PictureUrl.HasValue())
-										{
+                                        if (bundleItem.PictureUrl.HasValue())
+                                        {
 											<a href="@bundleItem.ProductUrl" title="@bundleItem.ProductName">
 												<img alt="@bundleItem.ProductName" src="@bundleItem.PictureUrl" title="@bundleItem.ProductName" />
 											</a>
-										}
+                                        }
 
-										if (bundlelength != (j + 1))
-										{
+                                        if (bundlelength != (j + 1))
+                                        {
 											<i class="fa fa-plus"></i>
-										}
-									}
+                                        }
+                                    }
 								</div>
-							}
+                            }
 						</div>
 					</div>
 
 					<div class="row m-t-05">
 						<div class="col-xs col-alpha">
                             @Html.EditorFor(x => item, "QtyInput", new { htmlAttributes = new {
-								data_update_url = Url.Action("UpdateOcCartItem", "ShoppingCart"), data_type = "cart", data_sci_id = item.Id } })
+                           data_update_url = Url.Action("UpdateOcCartItem", "ShoppingCart"), data_type = "cart", data_sci_id = item.Id } })
 						</div>
 						<div class="col-xs">
 							<span class="price unit-price">
@@ -129,15 +129,15 @@
 						</div>
 					</div>
 				</div>
-			}
+            }
 		</div>
-	}
+    }
 	@{ Html.RenderWidget("mini_shopping_cart_bottom"); }
 </div>
 
 @if (Model.TotalProducts == 0)
 {
-	return;
+    return;
 }
 
 <div class="offcanvas-cart-footer">
@@ -153,6 +153,7 @@
 			</div>
 		</div>
 		<div class="offcanvas-cart-footer-col text-xs-right">
+
 			@if (Model.DisplayShoppingCartButton)
 			{
 				if (Model.DisplayCheckoutButton)
@@ -188,4 +189,13 @@
 			}
 		</div>
 	</div>
+</div>
+
+<div class="offcanvas-cart-footer-row" style="background:#f7f7f7; padding: .5rem 1rem;">
+    <div class="m-r-05 fw-700">
+        Oder
+    </div>
+    <div class="offcanvas-cart-footer-col text-xs-right" style="align-items: flex-end;flex-direction: row;justify-content: space-around;flex-wrap: wrap;">
+        @{ Html.RenderWidget("offcanvas_cart_summary"); }
+    </div>
 </div>
