--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -23,8 +23,10 @@ $brand-warning:                 #ff9800; // #f0ad4e;
 
 $headings-line-height:          1.3;
 
-/*$font-family-sans-serif:    'Roboto', Helvetica, Arial, sans-serif;*/ 
-$font-family-sans-serif:        'Open Sans', sans-serif;
+$font-family-sans-serif:        -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-family-serif:             Georgia, "Times New Roman", Times, serif !default;
+$font-family-monospace:         Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-base:              $font-family-sans-serif !default;
 
 $font-size-root:                16px;
 $font-size-base:                0.875rem; // 14px
@@ -372,11 +374,19 @@ h4, h5, h6, .h4, .h5, .h6 {
     }
 }
 
-.d-flex             { display: flex !important; }
+.d-flex             { display: flex; }
 .flex-nowrap        { flex-wrap: nowrap !important; }
 .flex-wrap          { flex-wrap: wrap !important; }
 .flex-row           { flex-direction: row !important; }
 .flex-column        { flex-direction: column !important; }
+
+
+//
+// Some Flex utils
+// ------------------------------------------------------
+
+.flex-grow-0        { flex-grow: 0 !important }
+.flex-grow-1        { flex-grow: 1 !important }
 
 
 //
