--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
@@ -33,7 +33,7 @@
 			@{ Html.RenderPartial("Product.Attrs", Model); }
 		</div>
 	</div>
-	<div class="col-xs-12 col-lg-5">
+	<div class="col-xs-12 col-lg-5 d-flex">
 		<!-- Offer box -->
 		@{ Html.RenderPartial("Product.Offer", Model); }
 	</div>
