--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_shopbar.scss
@@ -1,10 +1,136 @@
 /// <reference path="bs4/scss/bootstrap.scss" />
 
 //
-// ShopBar Styles
+// ShopBar layout
 // --------------------------------------------------
 
 .shopbar-section {
+    padding: 1rem 0;
+}
+
+.shopbar {
+    margin: -0.5rem;
+    display: flex;
+    flex-wrap: nowrap;
+
+    /*border: 1px dashed blue;*/
+}
+
+.shopbar-col-group {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    flex-grow: 0;
+
+    /*border: 1px dashed red;*/
+}
+
+.shopbar-col {
+    padding: 0.5rem 0.375rem;
+    flex-grow: 0;
+
+    /*border: 1px dotted orange;*/
+}
+
+.shop-logo {
+    margin-left: 0;
+    transition: all 0.25s ease-out;
+
+    .search-focused & {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+
+    .brand {
+        display: block;
+        width: 150px;
+        max-width: 150px;
+        max-height: 60px;
+        text-align: center;
+
+        @media (min-width: 480px) {
+            & { max-width: 200px; max-height: 80px; width: auto; }
+        }
+
+        @include media-breakpoint-up(lg) {
+            & { max-width: 250px; max-height: 100px; width: auto; }
+        }
+    }
+}
+
+.shopbar-col-group-brand,
+.shopbar-search  {
+    flex-grow: 1;
+}
+
+.shopbar-tools {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    width: 100%;
+}
+
+.shopbar-button {
+    color: $body-color;
+    min-width: 60px;
+
+    .shopbar-button-icon {
+        font-size: 20px;
+        line-height: 1;
+        width: 1.25em;
+        height: 1.25em;
+        text-align: center;
+
+        > i { font-size: inherit !important; }
+    }
+
+    .shopbar-button-label-sm {
+        display: none;
+        color: #aaa;
+        font-size: 10px;
+        line-height: 1.3;
+        vertical-align: middle;
+        white-space: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    @include media-breakpoint-up(lg) {
+        height: $input-height;
+        .shopbar-button-icon { font-size: 28px; }
+    }
+}
+
+@include media-breakpoint-down(md) {
+    .shopbar {
+        flex-wrap: wrap;
+        border-bottom: 1px solid rgba(#000, 0.12);
+    }
+
+    .shopbar-col-group-tools {
+        width: 100%;
+    }
+
+    .shopbar-button {
+        text-align: center;
+
+        .shopbar-button-label {
+            display: none !important;
+        }
+
+        .shopbar-button-label-sm {
+            display: block;
+        }
+    }
+}
+
+
+//
+// ShopBar layout (Legacy)
+// --------------------------------------------------
+
+/*.shopbar-section {
     padding: 1.25rem 0;
 }
 
@@ -33,17 +159,17 @@
         margin-top: 1rem;
         padding-right: 0.6rem;
     }
-}
+}*/
 
 
 //
 // Logo
 // --------------------------------------------------
 
-.shop-logo {
+/*.shop-logo {
     max-width: 11rem;
     max-height: 6rem;
-}
+}*/
 
 
 
@@ -92,19 +218,18 @@
 // --------------------------------------------------
 
 .shopbar-tools {
-    @include clearfix();
+    /*@include clearfix();*/
 }
 
 .shopbar-tool {
-    float: left;
+    /*float: left;*/
     position: relative;
 }
 
 .shopbar-button {
     display: block;
     text-decoration: none !important;
-    //height: $input-height;
-    padding: 6px 10px;
+    padding: 0.35rem 0.5rem;
     border: 1px solid transparent;
     border-radius: 0.125rem;
     transition: all 0.12s ease;
@@ -132,24 +257,23 @@
     .shopbar-button-icon,
     .shopbar-button-label {
         display: inline-block;
-        vertical-align: bottom;
+        vertical-align: middle;
         position: relative;
         text-decoration: none;
     }
 
-    .shopbar-button-icon {
+    /*.shopbar-button-icon {
         margin-bottom: 0;
         > i {
             font-size: 1.6rem;
             line-height: 1.6rem;
             color: $body-color;
         }
-    }
+    }*/
 
     .shopbar-button-label {
         font-size: $font-size-xs;
         line-height: 1.2;
-        margin-left: 0.2rem;
         color: $body-color;
         color: rgba($body-color, 0.5);
         color: #999;
@@ -158,229 +282,4 @@
         vertical-align: top;
         //display: none;
     }
-}
-
-
-//
-// ShopBar Flyouts
-// --------------------------------------------------
-
-.shopbar-flyout {
-	position: absolute;
-	visibility: hidden;
-	opacity: 0;
-	top: 100%;
-	left: 0;
-	z-index: $zindex-dropdown;
-	float: left;
-	min-width: 400px;
-	max-width: 500px;
-	padding: 0.5rem 0;
-	margin: 0;
-    margin-top: -1px;
-	list-style: none;
-	background-clip: padding-box;
-  	
-  	height: 50px;
-  	min-height: 50px;
-	background-image: none;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-	
-	transition: opacity 0.15s ease-in-out;
-	background-color: $dropdown-bg;
-	border: $dropdown-border-width solid $dropdown-border-color;
-	border-color: rgba(0,0,0, 0.15);
-	border-radius: $border-radius;
-	box-shadow: 0 2px 8px rgba(0,0,0,.2);
-	
-    .spinner-container {
-        height: 100%;
-	}
-
-    .shopbar-tool:not(.loading) & > .spinner-container {
-		display: none;
-	}
-
-	.shopbar-tool.loading & > .shopbar-flyout-inner {
-		display: none;
-	}
-	
-	.shopbar-tool.loaded & {
-		height: auto;
-	}
-
-    .shopbar-tool.open & {
-	    visibility: visible;
-	    opacity: 1;
-	}
-  	
-	// Dividers (basically an hr) within the dropdown
-	.divider {
-		@include nav-divider($dropdown-divider-bg);
-	}
-
-	// Links within the dropdown menu
-	a {
-		font-weight: normal;
-		line-height: $line-height;
-		white-space: nowrap;
-	}
-}
-
-.shopbar-flyout--right {
-    // Aligns the dropdown menu to right
-    right: 0;
-	left: auto;
-}
-
-.shopbar-flyout-inner {
-	position: relative;
-	min-height: 50px;
-}
-
-.shopbar-flyout-inner .name {
-    color: $body-color;
-    text-decoration: none;
-	transition: color .1s linear;
-}
-
-.shopbar-flyout-inner .no-items {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 50%;
-	margin: 0 10px 0 10px;
-    margin-top: -(($line-height*$font-size-base)/2);
-	text-align: center;
-}
-
-.shopbar-flyout-inner .items {
-	padding: 0;
-	margin: 0;
-	font-size: 80%;
-}
-
-.shopbar-flyout-inner .price {
-	text-align: right;
-    font-weight: 600;
-}
-
-.shopbar-flyout-inner .items .item {
-	position: relative; 
-	padding: 8px 20px;
-	margin: 0;
-	border-bottom: 1px solid #e5e5e5;
-
-	&.omega { 
-		border-bottom: none 
-	}
-	
-	&.more { 
-		text-align: center;
-		.name {
-			color: #777;
-			font-size: 1.1em;
-			font-weight: bold;
-			&:hover {
-				color: $gray;
-			}
-		}
-	}
-
-	.picture {
-		display: inline-block;
-		text-align: center;
-		margin: 0; 
-		margin-right: 4px;
-		width: 32px;
-		
-		img { 
-			max-width: 32px; 
-			max-height: 50px 
-		}
-	}
-
-	.quantity {
-		width: 25px;
-		margin-left: 5px;
-        font-weight: 600;
-		.times {
-			font-size: .9em;
-		}
-	}
-
-	.data {
-		width: 200px;
-		overflow: hidden;
-        @include text-truncate()
-	}
-	
-	.data .attributes {
-		white-space: initial;
-		line-height: 12px;
-	}
-	
-	&.no-thumb .data {
-		width: 180px;
-	}
-	
-	.action {
-		padding-left: 4px;
-		i { font-size: 11px }
-	}
-	
-	.price {
-		width: 64px;
-	}
-
-	.remove {
-		position: absolute;
-		right: 4px;
-		top: 8px;
-		opacity: 0;
-		color: #000;
-		transition: opacity .1s linear;
-	}
-	
-	&:hover .remove {
-		opacity: 0.5;
-	}
-
-	.remove:hover {
-		opacity: 1;
-	}
-}
-
-#shopbar-flyout-wishlist .shopbar-flyout-inner .items .item {
-	.data { width: 136px }
-	&.no-thumb .data { width: 176px }
-}
-
-#shopbar-flyout-compare .shopbar-flyout-inner .items .item {
-	.figure { margin-right: 8px }
-	.data { width: 170px }
-}
-
-.shopbar-flyout-inner .summary {
-    padding: 12px 20px;
-	background: #f5f5f5; 
-	border-top: 1px solid #c2c2c2;
-	border-bottom: 1px solid #d2d2d2; 
-	font-weight: bold; 
-	box-shadow: inset 0px 5px 20px -9px rgba(0,0,0, .25); 	
-}
-
-.shopbar-flyout-inner .buttons {
-	padding: 20px 20px 12px 20px;
-}
-
-#shopbar-flyout-account .shopbar-flyout-inner {
-	padding: 10px 20px;
-}
-
-
-@include media-breakpoint-up(sm) {
-    .shop-logo { max-width: 16rem; }  
-    .shopbar-button .shopbar-button-icon > i { font-size: 1.75rem; line-height: 1.75rem; }
 }
