--- a/src/Presentation/SmartStore.Web/Views/Search/SearchBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/SearchBox.cshtml
@@ -22,7 +22,7 @@
 			@(Model.InstantSearchEnabled ? Html.Raw(" autocomplete=\"off\"") : null) />
 
 	<button type="submit" class="btn btn-primary btn-icon instasearch-button" title="@T("Search")">
-		<i class="fa fa-search instasearch-icon"></i>
+		<i class="lnr lnr-magnifier instasearch-icon"></i>
 	</button>
 
 	<div id="instasearch-drop">
