Updated PayPal Express Buttons

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_cart.scss
@@ -180,6 +180,7 @@
         align-items: center;
 
         img {
+            cursor: pointer;
             max-height: 40px;
             max-width: 150px;
 
