--- a/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/MiniShoppingCart.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/MiniShoppingCart.cshtml
@@ -1,9 +1,7 @@
 ﻿@model SmartStore.PayPal.Models.PayPalExpressPaymentInfoModel
 
 <div class="external-checkout-button">
-	<a href="@Url.Action("SubmitButton", "PayPalExpress", new { area = "SmartStore.PayPal" })">
-		@*<img src="@Model.SubmitButtonImageUrl" style="cursor: pointer;" />*@
-		<img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/checkout-logo-small-de.png")" />
+	<a id="paypal-express-button" href="@Url.Action("SubmitButton", "PayPalExpress", new { area = "SmartStore.PayPal" })">
+        <img src="@Url.Content(Model.SubmitButtonImageUrl)" />
 	</a>
 </div>
-
