--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
@@ -1,6 +1,5 @@
-﻿@model SpecificationAttributeModel
-
-@using Telerik.Web.Mvc.UI;
+﻿@using Telerik.Web.Mvc.UI;
+@model SpecificationAttributeModel
 
 @Html.ValidationSummary(false)
 @Html.HiddenFor(model => model.Id)
@@ -13,7 +12,24 @@
     EngineContext.Current.Resolve<IEventPublisher>().Publish(new TabStripCreated(x, "specificationattribute-edit", this.Html, this.Model));
 })
 @helper TabInfo()
-    { 
+{
+	if (Model.Id != 0)
+	{
+		<table class="adminContent">
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.Id)
+				</td>
+				<td class="adminData">
+					@Html.DisplayFor(model => model.Id)
+					@Html.ValidationMessageFor(model => model.Id)
+				</td>
+			</tr>
+		</table>
+
+		<p></p>
+	}
+
     @(Html.LocalizedEditor<SpecificationAttributeModel, SpecificationAttributeLocalizedModel>("specificationattribute-localized",
     @<table class="adminContent">
         <tr>
@@ -82,72 +98,73 @@
 			</td>
 		</tr>
     </table>
-    }
-@helper TabOptions()
-    { 
-        if (Model.Id > 0)
-        {
-            <table class="adminContent">
-                <tr>
-                    <td>
-                        @(Html.Telerik().Grid<SpecificationAttributeOptionModel>()
-						.Name("specificationattributeoptions-grid")
-							.DataKeys(x =>
-							{
-								x.Add(y => y.Id).RouteKey("optionId");
-								x.Add(y => y.SpecificationAttributeId).RouteKey("specificationAttributeId");
-							})
-							.Columns(columns =>
-							{
-								columns.Bound(x => x.Name);
-								//TODO display localized values here
-								columns.Bound(x => x.Alias);
-								columns.Bound(x => x.DisplayOrder)
-									.Width(180)
-									.Centered();
-								columns.Bound(x => x.Id)
-									.Width(120)
-									.Centered()
-									.ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:OpenPopup('" + @Url.Content("~/Admin/SpecificationAttribute/OptionEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=specificationattribute-form'); return false;\" class='btn' />")
-									.Title(T("Admin.Common.Edit").Text);
-								columns.Command(commands =>
-								{
-									commands.Delete().Localize(T);
-								})
-								.Width(120)
-								.Title(T("Admin.Common.Delete").Text);
-							})
-							.DataBinding(dataBinding =>
-								dataBinding.Ajax().Select("OptionList", "SpecificationAttribute", new { specificationAttributeId = Model.Id })
-								.Delete("OptionDelete", "SpecificationAttribute"))
-							.EnableCustomBinding(true))
-                    </td>
-                </tr>
-                <tr>
-                    <td width="100%">
-                        <button type="submit" id="btnAddNewOption" name="btnAddNewOption" class="btn btn-below"
-							   onclick="javascript:OpenPopup('@(Url.Action("OptionCreatePopup", "SpecificationAttribute", new { specificationAttributeId = Model.Id, btnId = "btnRefresh", formId = "specificationattribute-form" }))'); return false;">
-							<i class="fa fa-plus"></i>&nbsp;@T("Admin.Catalog.Attributes.SpecificationAttributes.Options.AddNew")
-						</button>
-                        <input type="submit" id="btnRefresh" name="btnRefresh" style="display: none" />
-                        <script type="text/javascript">
-                            $(document).ready(function () {
-                                $('#btnRefresh').click(function () {
-                                    //refresh grid
-                                    var optionsGrid = $("#specificationattributeoptions-grid");
-                                    optionsGrid.data('tGrid').ajaxRequest();
+}
 
-                                    //return false to don't reload a page
-                                    return false;
-                                });                                
-                            });
-                        </script>
-                    </td>
-                </tr>
-            </table>
-        }
-        else
-        {
-            @T("Admin.Catalog.Attributes.SpecificationAttributes.Options.SaveBeforeEdit")
-        }
+@helper TabOptions()
+{ 
+    if (Model.Id > 0)
+    {
+        <table class="adminContent">
+            <tr>
+                <td>
+                    @(Html.Telerik().Grid<SpecificationAttributeOptionModel>()
+					.Name("specificationattributeoptions-grid")
+						.DataKeys(x =>
+						{
+							x.Add(y => y.Id).RouteKey("optionId");
+							x.Add(y => y.SpecificationAttributeId).RouteKey("specificationAttributeId");
+						})
+						.Columns(columns =>
+						{
+							columns.Bound(x => x.Name);
+							//TODO display localized values here
+							columns.Bound(x => x.Alias);
+							columns.Bound(x => x.DisplayOrder)
+								.Width(180)
+								.Centered();
+							columns.Bound(x => x.Id)
+								.Width(120)
+								.Centered()
+								.ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:OpenPopup('" + @Url.Content("~/Admin/SpecificationAttribute/OptionEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=specificationattribute-form'); return false;\" class='btn' />")
+								.Title(T("Admin.Common.Edit").Text);
+							columns.Command(commands =>
+							{
+								commands.Delete().Localize(T);
+							})
+							.Width(120)
+							.Title(T("Admin.Common.Delete").Text);
+						})
+						.DataBinding(dataBinding =>
+							dataBinding.Ajax().Select("OptionList", "SpecificationAttribute", new { specificationAttributeId = Model.Id })
+							.Delete("OptionDelete", "SpecificationAttribute"))
+						.EnableCustomBinding(true))
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button type="submit" id="btnAddNewOption" name="btnAddNewOption" class="btn btn-below"
+							onclick="javascript:OpenPopup('@(Url.Action("OptionCreatePopup", "SpecificationAttribute", new { specificationAttributeId = Model.Id, btnId = "btnRefresh", formId = "specificationattribute-form" }))'); return false;">
+						<i class="fa fa-plus"></i>&nbsp;@T("Admin.Catalog.Attributes.SpecificationAttributes.Options.AddNew")
+					</button>
+                    <input type="submit" id="btnRefresh" name="btnRefresh" style="display: none" />
+                    <script type="text/javascript">
+                        $(document).ready(function () {
+                            $('#btnRefresh').click(function () {
+                                //refresh grid
+                                var optionsGrid = $("#specificationattributeoptions-grid");
+                                optionsGrid.data('tGrid').ajaxRequest();
+
+                                //return false to don't reload a page
+                                return false;
+                            });                                
+                        });
+                    </script>
+                </td>
+            </tr>
+        </table>
     }
+    else
+    {
+        @T("Admin.Catalog.Attributes.SpecificationAttributes.Options.SaveBeforeEdit")
+    }
+}
