--- a/src/Presentation/SmartStore.Web/Administration/Views/ProductAttribute/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ProductAttribute/List.cshtml
@@ -1,5 +1,4 @@
-﻿@model Telerik.Web.Mvc.GridModel<ProductAttributeModel>
-@using Telerik.Web.Mvc.UI
+﻿@using Telerik.Web.Mvc.UI
 @{  
     ViewBag.Title = T("Admin.Catalog.Attributes.ProductAttributes").Text;
 }
@@ -14,24 +13,24 @@
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<ProductAttributeModel>(Model.Data)
+            @(Html.Telerik().Grid<ProductAttributeModel>()
 					.Name("productattributes-grid")
 					.Columns(columns =>
 					{
 						columns.Bound(x => x.Name)
-							.Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
 							.ClientTemplate("<a href='Edit/<#= Id #>'><#= Name #></a>");
 						columns.Bound(x => x.Alias);
 						columns.Bound(x => x.AllowFiltering)
 							.Width(200)
-							.Template(item => @Html.SymbolForBool(item.AllowFiltering))
 							.ClientTemplate(@Html.SymbolForBool("AllowFiltering"))
 							.Centered();
 						columns.Bound(x => x.DisplayOrder)
 							.Width(200)
 							.Centered();
 					})
+					.Pageable(settings => settings.PageSize((int)ViewData["GridPageSize"]).Position(GridPagerPosition.Both))
 					.DataBinding(dataBinding => dataBinding.Ajax().Select("List", "ProductAttribute"))
+					.PreserveGridState()
 					.EnableCustomBinding(true))
         </td>
     </tr>
