First steps for OffCanvasMenu

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -154,6 +154,7 @@ $alert-border-radius:           0;
 @import "_gallery.scss";
 @import "_cart.scss";
 @import "_megamenu.scss";
+@import "_menu.scss";
 
 @import "_photoswipe-theme.scss";
 @import "_slick-theme.scss";
