--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/Menu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/Menu.cshtml
@@ -105,7 +105,7 @@
 
     @if (Model.DisplayAdminLink)
     {
-        <nav class="menubar-group menubar-group--special">
+        <nav class="menubar-group menubar-group--special hidden-lg-down">
             <a class="menubar-link" href="@Url.Content("~/admin")" target="_admin" rel="nofollow">
                 <i class="fa fa-cog"></i>
 				<span>@T("Account.Administration")</span>  
