--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -83,7 +83,8 @@
 		jsRoot + "public.common.js",
 		jsRoot + "public.offcanvas-cart.js",
 		jsRoot + "public.product-detail-2.js", // TODO: (mc) Remove public.product-detail.js once work is finished
-		jsRoot + "public.product-filter.js");
+		jsRoot + "public.product-filter.js",
+        jsRoot + "public.offcanvas-menu.js");
 }
 <!DOCTYPE html>
 <html lang="@this.WorkContext.WorkingLanguage.UniqueSeoCode">
